--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Exchange Rates</string>
+    <string name="rate_format">%.6f</string>
+    <string name="add_currency_to_favorite">Add currency %s - %s to favorite</string>
+    <string name="remove_currency_fom_favorite">Remove currency %s - %s from favorite</string>
+    <string name="choose_base_currency">Choose base currency…</string>
+    <string name="show_only_favorite">Show only favorite</string>
+
+    <!-- Filter dialog -->
+    <string name="filter_dialog_title">Filtering</string>
+    <string name="filter_dialog_alphabetical_title">Alphabetical</string>
+    <string name="filter_dialog_by_value_title">By value</string>
+    <string name="filter_dialog_ascending_title">Ascending</string>
+    <string name="filter_dialog_descending_title">Descending</string>
 </resources>
